Rewrite appointment overview using jQuery
Also the jQuery version has been updated to 1.7.0.

Dependencies on Google Closure and code related to it have
been removed.

The appointment tools (add invitees etc.) have not been
rewritten yet, and as a result do not work in this version.

Because it is not much slower but reduces complexity, /a#id=
URLs have become unsupported in favor of /a?id= urls.

There are some small visual changes involved, mainly in:
  - the yes/maybe/no buttons,
  - the Done button.

Further possible regressions:
  - This has not been tested in IE yet.
  - The internals of the overview have been changed, possibly
    making the page slower. This is however not expected to
    be noticable.

--- a/plapp/templates/base.html
+++ b/plapp/templates/base.html
@@ -23,7 +23,7 @@
 {% block styles %}{% endblock %}
 
 <script src='{% url django.views.i18n.javascript_catalog %}?lang={{ request.LANGUAGE_CODE }}'></script>
-<script src='http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js'></script>
+<script src='http://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js'></script>
 <script src='{{ STATIC_URL }}script/menubar.js'></script>
 {% block scripts %}{% endblock %}
 
@@ -62,7 +62,7 @@
   <div class=menu>
     <h1>{% trans "My appointments" %}</h1>{% get_appointments %}
     <ul>{% for appointment in appointments %}
-      <li class=radio><a href=/a#id={{ appointment.id }}>{{ appointment.get_title }}</a>{% endfor %}
+      <li class=radio><a href=/a?id={{ appointment.id }}>{{ appointment.get_title }}</a>{% endfor %}
       <li class=separator>
       <li><a href=/appointments>{% trans "All appointments" %}</a>
     </ul>
