--- a/plapp/static/style/appointment.css
+++ b/plapp/static/style/appointment.css
@@ -1,7 +1,3 @@
-@import url(goog-dialog.css);
-@import url(goog-popup-datepicker.css);
-@import url(timeentry.css);
-
 body {
   background: #9fc0e4;
 }
@@ -9,70 +5,60 @@ body {
   background: #3c7fc8;
 }
 
-#app-description {
+.appointment .description {
   padding: 10px;
   padding-top: 8px;
 }
-#app-description b {
+.appointment .description b {
   font-size: 18px;
   font-weight: normal;
 }
 .appointment {
   border-color: #687e95;
 }
-.appointment > table {
+.appointment table {
   border-collapse: collapse;
   width: 100%;
 }
-.appointment > table thead {
+.appointment table thead {
   background: #828282;
   color: #fff;
 }
-.appointment > table th {
+.appointment table th {
   font-weight: normal;
   padding: 5px 10px;
   font-size: 13px;
   text-align: left;
 }
-.appointment > table td {
+.appointment table td {
   vertical-align: top;
   padding: 0;
 }
-#dates, #people {
+.dates, .people {
   width: 130px;
 }
 
-.pleft-selectmenu {
+.appointment .select {
   background-color: #fff;
-  border-color: #ccc #666 #666 #ccc;
-  border-style: solid;
-  border-width: 1px;
   cursor: default;
-  margin: 0;
+  margin: 5px 0;
   outline: none;
-  padding: 4px 0;
+  padding: 0;
+  list-style: none;
 }
-.pleft-selectmenu .goog-menuitem {
-  padding-right: 4px;
+.appointment .select li {
+  padding:  4px 10px 4px 10px;
+  height: 32px;
+  font-size: 12px;
 }
-.pleft-selectmenu .goog-option-selected {
+.appointment .select li:hover {
+  background-color: #d6e9f8;
+}
+.appointment .select li.selected {
   background: #3c7fc8;
   color: #fff;
 }
-.appointment .pleft-selectmenu {
-  border: none;
-  padding: 0;
-}
-.appointment .goog-menuitem {
-  height: 32px;
-  padding-left: 10px;
-  padding-right: 0;
-}
-
-.appointment .pleft-selectmenu {
-  margin: 5px 0;
-}
-.appointment .goog-menuitem .bar {
+.appointment .select .bar {
   background: #fcef42;
   border-left: 10px solid #12bc41;
   border-right: 10px solid #f66262;
@@ -81,7 +67,7 @@ body {
   margin-top: 4px;
 }
 
-#availability {
+.appointment .availability {
   padding-top: 4px;
   background: #f3f3f3;
 }
@@ -91,15 +77,9 @@ body {
   margin: 1px 12px 0px 2px;
   background: #bdbdbd;
 }
-.balloon .choose {
-  font-size: 11px;
+.person.balloon {
 }
-.balloon .choose .goog-custom-button-inner-box {
-  padding: 1px 2px;
-}
-.person-balloon {
-}
-.date-balloon {
+.date.balloon {
   margin-left: 12px;
 }
 .balloon .arrow {
@@ -113,17 +93,17 @@ body {
   height: 0;
   width: 0;
 }
-.date-balloon .arrow {
+.date.balloon .arrow {
   margin-left: 294px;
 }
 .balloon .availability {
   height: 39px;
   padding: 0 2px;
 }
-.date-balloon .availability {
+.date.balloon .availability {
   height: 37px;
 }
-.date-balloon .static.availability {
+.date.balloon .static.availability {
   height: 33px;
 }
 .balloon .availability + .availability {
@@ -170,7 +150,30 @@ body {
 
 .availability.form .choose {
   float: left;
+  margin: 3px 4px 0 2px;
 }
+.availability.form .choose .toggle {
+  float: left;
+  background-color: #eee;
+  border: 4px solid #eee;
+  margin: 0;
+  border-radius: 4px 0 0 4px;
+}
+.availability.form .choose .toggle + .toggle {
+  border-radius: 0;
+}
+.availability.form .choose .toggle + .toggle + .toggle {
+  border-radius: 0 4px 4px 0;
+}
+.availability.form .choose .toggle:hover {
+  background-color: #fefefe;
+  border-color: #fefefe;
+}
+.availability.form .choose .toggle.checked {
+  background-color: #aaa;
+  border-color: #aaa;
+}
+
 .availability.form textarea {
   font-size: 13px;
   width: 200px;
@@ -182,25 +185,21 @@ body {
   margin: 2px;
   padding: 0;
 }
-.date-balloon .availability.form textarea {
+.date.balloon .availability.form textarea {
   width: 183px;
   height: 27px;
 }
 
-#save {
+.save {
   padding-left: 10px;
 }
-#save-button {
+.save button {
   vertical-align: 2px;
   font-weight: bold;
 }
-#status {
+.status {
   padding-left: 10px;
   font-size: 13px;
-}
-
-.goog-menu {
-  z-index: 10;
 }
 
 #tools h3 {
@@ -258,10 +257,6 @@ body {
   width: 500px;
   height: 60px;
   outline: none;
-}
-
-.goog-date-picker  button {
-  font: bold 12px Arial, sans-serif;
 }
 
 .te-up, .te-down {
