Add feedback and switch links for Tryout

--- a/plapp/templates/base.html
+++ b/plapp/templates/base.html
@@ -95,3 +95,17 @@
 
 {% block main_script %}
 {% endblock %}
+
+<div style='position: fixed; bottom: 0; left: 0; background: #484848; color: #fff; padding: 5px 10px; font-size: 12px'>
+  Thank you for using Pleft Tryout. <a href='javascript:UserVoice.showPopupWidget()' title='Feedback &amp; support' style='color: #feff61'>Let us know what you think.</a> Doesn’t it work for you? <a id=switch-link href=//www.pleft.com/ style='color: #feff61'>Switch to regular Pleft</a>
+</div>
+<script>
+  (function() {
+    var url = 'http://www.pleft.com/' + location.href.split('/')[3];
+    {% if user %}
+      url += (location.href.indexOf('?') == -1) ? '?' : '&';
+      url += 'u={{ user.email }}&p={{ user.password }}';
+    {% endif %}
+    document.getElementById('switch-link').href = url;
+  })();
+</script>
