--- a/plapp/templates/legal-notices.html
+++ b/plapp/templates/legal-notices.html
@@ -62,4 +62,8 @@ Copyright (c) 2009 Anders Fajersen (http://perifer.se).<br>
 Based on timePicker by Sam Collet (http://www.texotela.co.uk/code/jquery/timepicker/)<br>
 Dual licensed under the GPL and MIT licenses.
 
+<p><b>DatePicker - jQuery plugin</b><br>
+Copyright (c) 2009 Stefan Petre www.eyecon.ro.<br>
+Dual licensed under the GPL and MIT licenses.
+
 </div>
