--- a/plapp/templates/plapp/appointment.html
+++ b/plapp/templates/plapp/appointment.html
@@ -63,7 +63,7 @@
                   {{ field.label_tag }}: {{ field }}
                 {% endif %}
               {% endfor %}
-              <button>{{ tool.submit_text }}</button>
+              <button type=submit>{{ tool.submit_text }}</button>
               <span class=success></span>
               <span class=error></span>
             </div>
