--- a/plapp/static/style/form.css
+++ b/plapp/static/style/form.css
@@ -55,6 +55,8 @@ body {
   text-decoration: none;
   font-size: 36px;
   cursor: pointer;
+  z-index: 3;
+  position: relative;
 }
 .side-help .popup > h1 {
   font-size: 16px;
