--- a/plapp/static/style/ie7.css
+++ b/plapp/static/style/ie7.css
@@ -26,6 +26,10 @@
   float: left;
 }
 
+.side-help .popup > p a {
+  margin-top: -8px !important;
+}
+
 #appointment .date-balloon .arrow {
   margin-left: 147px;
 }
